--- a/docs/latex/rt_8hpp.tex
+++ b/docs/latex/rt_8hpp.tex
@@ -3,8 +3,7 @@
 {\ttfamily \#include $<$stddef.\+h$>$}\newline
 {\ttfamily \#include $<$assert.\+h$>$}\newline
 {\ttfamily \#include $<$fstream$>$}\newline
-Include dependency graph for rt.\+hpp\+:
-\nopagebreak
+Include dependency graph for rt.\+hpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
