--- a/docs/latex/classrpi__rt_1_1rt__settings.tex
+++ b/docs/latex/classrpi__rt_1_1rt__settings.tex
@@ -11,8 +11,7 @@ This settings class has all the settings that are required to be applied to a th
 
 
 
-Collaboration diagram for rpi\+\_\+rt\+::rt\+\_\+settings\+:
-\nopagebreak
+Collaboration diagram for rpi\+\_\+rt\+::rt\+\_\+settings\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -175,6 +174,9 @@ Set C\+PU D\+MA Latency to 0, Find more information here\+:https\+://access.redh
 {\em std\+::runtime\+\_\+error} & if the method fails to set C\+PU D\+MA Latency \\
 \hline
 \end{DoxyExceptions}
+\begin{DoxyNote}{Note}
+This function is not tested yet 
+\end{DoxyNote}
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
